# docs-mcp

./: .gitignore  CONTRIBUTING.md  PUBLISH.md  README.md  TAG_RELEASE.md  pyproject.toml
docs/sample/: mcp-settings.md
scripts/: generate_metadata.py  github_import.py  import_from_github.py  import_from_url.py  url_import.py
src/: docs_mcp.py  document_manager.py
src/mcp_server_docs/: document_manager.py
src/mcp_server_docs/scripts/: generate_metadata.py  github_import.py  url_import.py
tests/: test_document_manager.py  test_import_from_url.py  test_integration.py
