[project]
name = "docs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.4",
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
